src/user.css
/* ... */
#power-bar-wrapper {
  background-color: rgba(var(--spice-rgb-main), 0.8) !important;
  backdrop-filter: blur(50px) saturate(1.5);
  border-radius: var(--border-radius-1) !important;
}

#power-bar-search.has-suggestions {
  border-bottom: none !important;
  width: 100% !important;
}

#power-bar-search:focus-visible {
  border-bottom: 2px solid var(--spice-accent) !important;
  border-radius: var(--border-radius-3) !important;
}

#suggestions-container h5 {
  font-size: 1.1em !important;
  color: var(--spice-subtext) !important;
}

.suggestions-category {
  border: none !important;
  padding-bottom: 0 !important;
}

.suggestion-item__active {
  background-color: var(--spice-accent) !important;
  border-radius: var(--border-radius-3) !important;
}

.suggestion-item__img {
  border-radius: 10% !important;
}

/* LibraryX */

/* Top container */

.Root__top-container {
  padding-top: 0 !important;
}

/* Topbar */

.main-topBar-container > *:not(button):not(.main-topBar-historyButtons):not(.hte6oQTQDvadfi5BA9eN),
.main-topBar-topbarContent {
  -webkit-app-region: drag !important;
}

/* Main view */

/* rounded main view container corners */
.Root__main-view::before {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  border-radius: var(--border-radius-1);
  box-shadow:
    0 -8px 0 var(--spice-sidebar),
    0 8px 0 var(--spice-sidebar);
  pointer-events: none;
}

.Root__main-view {
  border-radius: var(--border-radius-1) !important;
  top: 64px;
  height: calc(100% - 48px);
  overflow: visible;
}

.main-view-container__scroll-node-child-spacer {
  height: 64px !important;
}

.main-entityHeader-background,
.main-entityHeader-background.main-entityHeader-gradient {
  margin-top: 64px;
}

.main-view-container {
  margin-top: -64px;
}

.main-view-container__scroll-node:has(.lyrics-lyricsContainer-LyricsContainer) {
  margin-top: 64px;
}

.contentSpacing:not(.artist-artistDiscography-topBar, .search-searchCategory-container) {
  padding-top: 20px;
}

.main-home-home {
  padding-top: 16px;
}

/* Left navbar */

.ChipInnerComponent,
.ChipInnerComponent-secondary {
  background-color: var(--spice-card);
  color: var(--spice-text);
}

.ChipInnerComponent-selected,
.ChipInnerComponent-selected-secondary {
  background-color: var(--spice-text);
  color: var(--spice-card);
}

.ChipInnerComponent:hover,
.ChipInnerComponent-selected:hover,
.ChipInnerComponent-selected-secondary:hover {
  background-color: var(--spice-selected-row) !important;
  color: var(--spice-text);
}

.Root__nav-bar {
  max-width: unset !important;
  height: calc(100% - 48px);
  top: 64px;
}

.main-yourLibraryX-libraryContainer {
  padding-bottom: 0 !important;
}

.main-yourLibraryX-entryPoints {
  border-radius: var(--border-radius-1);
}

.main-yourLibraryX-navItem {
  padding: 2px 0px !important;
}

.main-yourLibraryX-navLink {
  border-radius: var(--border-radius-2);
  min-height: 49px;
  min-width: 49px;
  padding-left: 13px;
  transition: all ease 100ms;
}

.main-yourLibraryX-navLink:hover > .home-icon,
.main-yourLibraryX-navLink:hover > .search-icon {
  background-color: var(--spice-text) !important;
}

.main-yourLibraryX-navLinkActive > .home-active-icon,
.main-yourLibraryX-navLinkActive > .search-active-icon {
  animation: bounce 175ms ease-out forwards;
}

@keyframes bounce {
  0% {
    transform: translate(0, -25%);
  }

  50% {
    transform: translate(0, 25%);
  }

  100% {
    transform: translate(0, 0);
  }
}

.main-yourLibraryX-navLinkActive.active {
  background-color: var(--spice-selected-row);
}

.main-yourLibraryX-navLink-accent {
  position: absolute;
  width: 4px;
  height: 25px;
  background-color: var(--spice-accent);
  border-radius: var(--border-radius-2);
  left: 12px;
  display: none;
}

.home-icon,
.search-icon {
  transition: background-color linear 200ms;
}

.main-yourLibraryX-button path {
  display: none !important;
}

.main-yourLibraryX-collapseButton.main-yourLibraryX-collapseButtonIsCollapsed
  > .main-yourLibraryX-button {
  color: var(--spice-subtext);
}

.main-yourLibraryX-collapseButton.main-yourLibraryX-collapseButtonIsCollapsed svg {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_library_24_regular.svg');
  background-color: var(--spice-subtext);
}

.main-yourLibraryX-collapseButton > .main-yourLibraryX-button {
  color: var(--spice-text);
}

.main-yourLibraryX-collapseButton svg {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_library_24_filled.svg');
  background-color: var(--spice-text);
}

.main-yourLibraryX-createButton span {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_add_24_filled.svg');
  background-color: var(--spice-text);
  width: 18px;
  height: 18px;
}

.main-rootlist-wrapper {
  padding-left: unset;
  padding-right: unset;
}

.BoxComponent-group-tinted-isInteractive-hasLeadingOrMedia-paddingBlockStart_8px-paddingBlockEnd_8px-minBlockSize_56px-padding_8px.main-yourLibraryX-listItemGroup {
  background-color: var(--spice-selected-row) !important;
}

.main-yourLibraryX-libraryContainer {
  --background-highlight: var(--spice-selected-row) !important;
  --text-bright-accent: var(--spice-accent) !important;
  padding-bottom: 105px !important;
}

.main-yourLibraryX-listRowSubtitleLeadingWrapper svg {
  fill: var(--spice-accent);
}

.main-yourLibraryX-listRowEntityImage {
  border-radius: var(--border-radius-2);
}

/* Player bar */

[dir='ltr'] .main-coverSlotCollapsed-navAltContainer {
  transform: none !important;
}

.main-nowPlayingBar-nowPlayingBar {
  padding-left: 16px;
  padding-right: 16px;
}

.main-nowPlayingBar-left {
  padding-inline-start: 0px !important;
}

/* Search */

.x-searchInput-searchInputInput {
  padding-left: 18px;
  padding-right: 62px;
}

/* Right sidebar */

.main-buddyFeed-scrollBarContainer {
  height: calc(100% - 105px);
}
/* ... */

